--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
                 
                 <!-- Role 2: Data Quality Administrator (NEW) -->
                 <div class="tech-card p-6 rounded-xl">
-                    <h3 class="text-2xl font-semibold text-blue-800">Data Quality Administrator</h3>
-                    <p class="text-lg text-slate-600">eHealth Registries, Regina, SK | April 2025 – September 2025</p>
+                    <h3 class="text-2xl font-semibold text-blue-800">Data Quality Administrator - Registries</h3>
+                    <p class="text-lg text-slate-600">eHealth Saskatchewan, Regina, SK | April 2025 – September 2025</p>
                     <ul class="list-disc list-outside ml-5 mt-4 text-slate-700 space-y-2">
                         <li>Executed comprehensive **data quality audits** on provincial health registry data to ensure high standards of accuracy, completeness, and consistency.</li>
                         <li>Investigated and **resolved data discrepancies** and errors flagged by system reports, directly improving database reliability.</li>
