--- a/index.html
+++ b/index.html
@@ -164,6 +164,11 @@
             <li>Tier 1 technical support for healthcare professionals, handling access & configuration issues.</li>
             <li>Accurate ticketing, priority triage and escalation to maintain SLA compliance.</li>
             <li>User education and strict adherence to data privacy processes.</li>
+            <li>Served as the first point of contact for clients accessing provincial health information systems such as PHRS and Vital Statistics.</li>
+            <li>Verified and updated registry data, ensuring accuracy and compliance with the Health Information Protection Act (HIPA).</li>
+            <li>Logged and managed incidents using internal ticketing tools to resolve technical and data issues efficiently.</li>
+            <li>Supported QA testing and feedback during platform updates to ensure system reliability and improved user experience.</li>
+            <li>Key Achievement: Improved data accuracy and reduced duplicate entries across registry databases through proactive error detection and resolution.</li>
           </ul>
         </article>
 
@@ -174,6 +179,11 @@
             <li>Performed data quality audits and resolved discrepancies to improve registry reliability.</li>
             <li>Built data cleansing procedures and validation checks in collaboration with IT.</li>
             <li>Improved reporting fidelity and reduced repeat data issues.</li>
+            <li>Supported and maintained Person Health Registration System (PHRS) and Vital Statistics repositories to ensure accuracy and integrity of citizen data.</li>
+            <li>Identified and resolved duplicate and merged records using established data quality methodologies and validation tools.</li>
+            <li>Collaborated with internal and external stakeholders to standardize data management practices and streamline registry processes.</li>
+            <li>Documented workflows, contributed to user testing, and recommended process improvements to enhance data governance.</li>
+            <li>Delivered reports and summaries of data remediation activities to management for performance tracking and quality assurance.</li>
           </ul>
         </article>
 
